force-app/main/default/objects/Reference_Scheme__c/Reference_Scheme__c.object-meta.xml
<CustomObject>
    <label>Reference Scheme</label>
    <nameField>
        <displayFormat>RFS-{0000}</displayFormat>
        <label>Reference Scheme Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Schemes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>