force-app/main/default/objects/Reference_Scheme__c/fields/Actions__c.field-meta.xml
<CustomField>
    <fullName>Actions__c</fullName>
    <label>Actions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>