force-app/main/default/objects/Reference_Scheme__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Telephone Reference</fullName>
            </value>
            <value>
                <fullName>Site Reference</fullName>
            </value>
            <value>
                <fullName>Webinar Presentation</fullName>
            </value>
            <value>
                <fullName>Case Study</fullName>
            </value>
            <value>
                <fullName>Event Speaker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>