force-app/main/default/objects/Reference_Scheme__c/fields/Additional_Points_Value__c.field-meta.xml
<CustomField>
    <fullName>Additional_Points_Value__c</fullName>
    <label>Additional Points Value</label>
    <summarizedField>Points__c.Vaule__c</summarizedField>
    <summaryForeignKey>Points__c.Reference_Scheme__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>