force-app/main/default/objects/Reference_Scheme__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <label>Contact Name</label>
    <length>210</length>
    <type>Text</type>
</CustomField>