force-app/main/default/objects/Reference_Scheme__c/fields/Date_Joined_Reference_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Date_Joined_Reference_Scheme__c</fullName>
    <label>Date Joined Reference Scheme</label>
    <type>Date</type>
</CustomField>