force-app/main/default/objects/Reference_Scheme__c/fields/Date_Left_Reference_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Date_Left_Reference_Scheme__c</fullName>
    <label>Date Left Reference Scheme</label>
    <type>Date</type>
</CustomField>