force-app/main/default/objects/Reference_Scheme__c/fields/Live_Points_Value__c.field-meta.xml
<CustomField>
    <fullName>Live_Points_Value__c</fullName>
    <formula>Value__c + Additional_Points_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Live Points Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>