force-app/main/default/objects/Reference_Scheme__c/fields/On_HCM_Program__c.field-meta.xml
<CustomField>
    <fullName>On_HCM_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On HCM Program?</label>
    <type>Checkbox</type>
</CustomField>