force-app/main/default/objects/Reference_Scheme__c/fields/Remaining_Points__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Points__c</fullName>
    <label>Remaining Points</label>
    <summarizedField>Points__c.Remaining_Points__c</summarizedField>
    <summaryForeignKey>Points__c.Reference_Scheme__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>