force-app/main/default/objects/Reference_Scheme__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <formula>IF(ISPICKVAL( Activity__c , &apos;Telephone Reference&apos; ), 100, 

IF(ISPICKVAL( Activity__c, &apos;Site Reference&apos; ), 500, 

IF(ISPICKVAL( Activity__c, &apos;Webinar Presentation&apos; ), 500, 

IF(ISPICKVAL( Activity__c, &apos;Case Study&apos; ), 1000, 

IF(ISPICKVAL( Activity__c, &apos;Event Speaker&apos; ), 1000,0)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>